--- a/esame/pom.xml
+++ b/esame/pom.xml
@@ -62,6 +62,11 @@
         <version>${maven-checkstyle-plugin.version}</version>
         <dependencies>
           <dependency>
+          <groupId>com.google.code.gson</groupId>
+          <artifactId>gson</artifactId>
+          <version>2.10.1</version>
+          </dependency>
+          <dependency>
             <groupId>com.puppycrawl.tools</groupId>
             <artifactId>checkstyle</artifactId>
             <version>${checkstyle.version}</version>
